Further CSS Fixes, Toolbar placement
In home .php, I added the 'add a form' button to the toolbar, and
removed it from the 'home_sections.html' template.
removed previous edit to ui-accordion, and made a change to the margin
in '.homepage-description', (formulize-admin.css).
Finally, as a precaution to eliminate any further overlapping of
elements on the admin page, I added a minimum width of 803 pixels
(measured least pixels required with a web dev. ruler) to the
'#xo-canvas-content' div.

--- a/modules/formulize/templates/css/formulize-admin.css
+++ b/modules/formulize/templates/css/formulize-admin.css
@@ -356,6 +356,7 @@ h6 {
   margin-bottom: -19px; }
 
 #xo-canvas-content {
+  min-width: 782px;
   margin-left: 30px;
   margin-right: 30px; }
 
@@ -1552,9 +1553,8 @@ div.description {
   text-align: left !important; }
 
 .homepage-description {
-  max-width: 45%;
   margin-bottom: 1em;
-  margin-top: -20px; }
+  margin-top: 5px; }
 
 form textarea {
   width: 80%; }
